fabric/testdata/out/ing_smart-product-platform-test-gateway-reject-http-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-routes":"PathSubtree(\"/\")
      \u0026\u0026 Header(\"X-Forwarded-Proto\", \"http\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e status(400) -\u003e inlineContent(\"{\\\"title\\\":\\\"Gateway Rejected\\\",\\\"status\\\":400,\\\"detail\\\":\\\"TLS
      is required\\\",\\\"type\\\":\\\"https://cloud.docs.zalando.net/howtos/ingress/#redirect-http-to-https\\\"}\")
      -\u003e \u003cshunt\u003e"},"labels":{"application":"smart-product-platform-test","component":"service","controller-uid":"d3827fcf-dbf7-4d68-9e09-27e82003d0db","deployment-id":"d-sgokz8f17ukn9f5xqjnpf9xuk","environment":"staging","pipeline-id":"l-2dwhxqk9wh3m6ur6ovucqfumec","version":"master-13"},"name":"smart-product-platform-test-gateway-reject-http-route","namespace":"default"},"spec":{"rules":[{"host":"spp-product-details.smart-product-platform-test.zalan.do","http":{"paths":[{"backend [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-routes: PathSubtree("/") && Header("X-Forwarded-Proto", "http")
      -> unverifiedAuditLog("sub") -> status(400) -> inlineContent("{\"title\":\"Gateway
      Rejected\",\"status\":400,\"detail\":\"TLS is required\",\"type\":\"https://cloud.docs.zalando.net/howtos/ingress/#redirect-http-to-https\"}")
      -> <shunt>
  creationTimestamp: "2021-07-06T12:27:21Z"
  generation: 1
  labels:
    application: smart-product-platform-test
    component: service
    controller-uid: d3827fcf-dbf7-4d68-9e09-27e82003d0db
    deployment-id: d-sgokz8f17ukn9f5xqjnpf9xuk
    environment: staging
    pipeline-id: l-2dwhxqk9wh3m6ur6ovucqfumec
    version: master-13
  name: smart-product-platform-test-gateway-reject-http-route
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: smart-product-platform-test-gateway
    uid: d3827fcf-dbf7-4d68-9e09-27e82003d0db
  resourceVersion: "1357488782"
  uid: d26d534e-ccad-4668-a86c-177ed8d382d7
spec:
  rules:
  - host: spp-product-details.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: smart-product-platform-test
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
